--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^0.14.7"
+    "history": "^1.13.1",
+    "react": "^0.14.7",
+    "react-router": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
-    "babel-preset-es2015": "^6.5.0"
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0"
   }
 }
