--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "history": "^1.13.1",
     "react": "^0.14.7",
-    "react-router": "^1.0.1"
+    "react-router": "^1.0.1",
+    "firebase": "~2.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
