--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "history": "^1.13.1",
     "react": "^0.14.7",
     "react-router": "^1.0.1",
-    "firebase": "~2.3.2"
+    "firebase": "~2.3.2",
+    "axios": "~0.8.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
