--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^0.14.7",
     "react-router": "^1.0.1",
     "firebase": "~2.3.2",
-    "axios": "~0.8.0"
+    "axios": "~0.8.0",
+    "re-base": "~1.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
